Update target JVM