@@ -4,6 +4,19 @@ version := "0.1"
 
 scalaVersion := "2.13.1"
 
+javacOptions in Compile += "--enable-preview"
+javacOptions in Compile ++= Seq("-source", "13", "-target", "13", "-Xlint")
+javaOptions += "--enable-preview"
+
+initialize := {
+    val _ = initialize.value
+    val javaVersion = sys.props("java.specification.version")
+    if (javaVersion != "13")
+        sys.error("Java 13 is required for this project. Found " + javaVersion + " instead")
+}
+
+lazy val roasterVersion = "2.21.1.Final"
+
 libraryDependencies ++= Seq(
     // https://mvnrepository.com/artifact/org.jboss.forge.roaster/roaster-api
     "org.jboss.forge.roaster"   % "roaster-api"                         % roasterVersion,
